--- a/css/main.css
+++ b/css/main.css
@@ -96,36 +96,58 @@ textarea {
    ========================================================================== */
 
 html {
-  background-color: #fff;
+  background-color: #222;
   height: 100%;
   width: 100%;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Lora', serif;
   padding: 0 2em;
   font-size: 1.25em;
   height: 100%;
   color: #fff;
 }
 
-header,
-footer {
+header{
   background-color: #222;
   height: 80px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding-left: 10px;
+  font-family: 'Lora', serif;
+  font-size: 2em;
+  font-weight: 700;
 }
 
 main {
-  background-color: #ccc;
+  background-color: #222;
   height: 250px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding-left: 10px;
+  font-family: 'Lora', serif;
+  font-size: 1.25em;
+  font-weight: 400;
+  border-bottom: 1px solid #fff;
+
+}
+footer{
+  background-color: #222;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 5px;
+  font-family: 'Lora', serif;
+  font-size: 1em;
+  font-weight: 400;
+  border-top: 1px solid #fff;
 }
 
 header,
@@ -139,18 +161,21 @@ main {
   justify-content: space-between;
   align-items: center;
   flex-flow: row wrap;
+  max-width: 1200px;
 }
 
 .flex-items {
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1em;
+  background-color: #222;
   width: 30%;
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid #555;
+  padding: 15px 5px 15px 5px;
 }
 
 /* ==========================================================================
